all functions templates laid out. TODO: write-out code

--- a/src/allFours.html
+++ b/src/allFours.html
@@ -25,7 +25,7 @@
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="dealHand('beg1', getHand())">Beg</button>
                     <button class="w3-btn" onclick="mainGameLoop()">Stand</button>
-                    <button class="w3-btn" id="quitBtn" onclick="UnitTestObjects(createDeck())">Quit</button>
+                    <button class="w3-btn" id="quitBtn" onclick="scoreboard()">Quit</button>
                 </div>
                 <div class="hand" id="tophand">
                     <!--
