--- a/src/allFours.html
+++ b/src/allFours.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="allfours.js"></script>
+    <script src="allfours.js"></script>    
 </head>
+
 <body>
     <!-- Heading -->
     <header id="heading">
@@ -32,7 +33,7 @@
     <div>
         <!-- Game Board -->
         <div class="container" id="game_container">
-                <canvas id="game_board" width="700" height="450"></canvas>
+                <!--  <canvas id="game_board" width="700" height="450"></canvas>  -->
         </div>
         <!-- Game Control Panel -->
         <div class="w3-sidebar w3-bar-block" id="controlPanel">
@@ -43,7 +44,7 @@
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="unitTestForDisplayTrump()">Unit Test</button>
-                    <button class="w3-btn" onclick="mainGameLoop()">Play</button>
+                    <button class="w3-btn" onclick="unitTestForPlayCard()">Play</button>
                     <button class="w3-btn" id="quitBtn" onclick="scoreboard()">Score</button>
                 </div>
                 <!-- Display of Player 1's hand -->
@@ -56,14 +57,18 @@
         
     </div>
 
-
-
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>Copyright &copy; 2018 Gallatin Engineering Ltd. Powered by Prodigy LLC.</p>
+            <p>Copyright &copy; 2018 Gallatin Engineering Ltd. Powered by Prodigy Engineering LLC.</p>
         </div>
-    </footer>     
+    </footer>
+
+    <script>
+        window.onload = function () {
+            mainGameLoop();
+        }
+    </script>     
 </body>
 </html>
 
