--- a/src/allFours.html
+++ b/src/allFours.html
@@ -43,7 +43,7 @@
                 </div>
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
-                    <button class="w3-btn" onclick="unitTestForDisplayTrump()">Unit Test</button>
+                    <button class="w3-btn" onclick="unitTestForDeckArray()">Unit Test</button>
                     <button class="w3-btn" onclick="unitTestForPlayCard()">Play</button>
                     <button class="w3-btn" id="quitBtn" onclick="scoreboard()">Score</button>
                 </div>
