--- a/src/allFours.html
+++ b/src/allFours.html
@@ -44,7 +44,7 @@
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="unitTestForDeckArray()">Unit Test</button>
-                    <button class="w3-btn" onclick="unitTestForPlayCard()">Play</button>
+                    <button class="w3-btn" onclick="unitTestForDisplayTrump()">Play</button>
                     <button class="w3-btn" id="quitBtn" onclick="scoreboard()">Score</button>
                 </div>
                 <!-- Display of Player 1's hand -->
