--- a/src/allFours.html
+++ b/src/allFours.html
@@ -45,7 +45,7 @@
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="unitTestForPlayCard()">Unit Test</button>
                     <button class="w3-btn" onclick="unitTestForDisplayTrump()">Play</button>
-                    <button class="w3-btn" id="quitBtn" onclick="scoreboard()">Score</button>
+                    <button class="w3-btn" id="quitBtn" onclick="displayScoreboard(6, 0)">Score</button>
                 </div>
                 <!-- Display of Player 1's hand -->
                 <div class="hand" id="tophand"></div>
