--- a/src/allFours.html
+++ b/src/allFours.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="manifest" href="manifest.json">
     <script src="allfours.js"></script>    
 </head>
 
