--- a/src/allFours.html
+++ b/src/allFours.html
@@ -45,7 +45,7 @@
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="unitTestForPlayCard()">Unit Test</button>
-                    <button class="w3-btn" onclick="unitTestForDisplayTrump()">Play</button>
+                    <button class="w3-btn" onclick="unitTestForCardObjects()">Play</button>
                     <button class="w3-btn" id="quitBtn" onclick="displayScoreboard(6, 10)">Score</button>
                 </div>
                 <!-- Display of Player 1's hand -->
