--- a/src/allFours.html
+++ b/src/allFours.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link rel="manifest" href="manifest.json">
-    <script src="allfours.js"></script>    
+    <script src="allfours.js"></script> 
+    <script src="lib/testing/humanTest.js"></script>   
 </head>
 
 <body>
@@ -45,7 +46,7 @@
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="unitTestForPlayCard()">Unit Test</button>
-                    <button class="w3-btn" onclick="unitTestForCardObjects()">Play</button>
+                    <button class="w3-btn" onclick="unittest()">Play</button>
                     <button class="w3-btn" id="quitBtn" onclick="displayScoreboard(6, 10)">Score</button>
                 </div>
                 <!-- Display of Player 1's hand -->
