--- a/src/allFours.html
+++ b/src/allFours.html
@@ -66,8 +66,7 @@
 
     <script>
         window.onload = function () {
-           // mainGameLoop();
-           loadGameAssets();
+            mainGameLoop();
            
         }
     </script>     
