--- a/src/lib/title-screen.html
+++ b/src/lib/title-screen.html
@@ -10,9 +10,9 @@
 <TITLE>All Fours Game Title Screen</TITLE>
 
 <SCRIPT src="title-script.js"></SCRIPT>
-    <script src="game-loader.js">
+<script src="game-loader.js">
       window.onload = loadMain();   
-    </script>
+</script>
 
 </HEAD>
 <BODY onload="setTimeout(homeScreen, 3000)">
@@ -43,7 +43,7 @@
             <!--    Home Icon & Settings Icon (bottom left corner)      -->
           </div>
           <div class="footnote-icons">
-            <a href="#"><i class="fas fa-cog" title="Settings" onclick="menuFunction()"></i></a>  
+            <a href="#"><i class="fas fa-cog" title="Settings" onclick="loadMain()"></i></a>  
             <a href="#"><i class="fas fa-home" title="Home" onclick="homeScreen()"></i></a>
           </div>
         </form>
