--- a/src/lib/title-screen.html
+++ b/src/lib/title-screen.html
@@ -15,7 +15,7 @@
 </script>
 
 </HEAD>
-<BODY onload="setTimeout(homeScreen, 3000)">
+<BODY onload="setTimeout(homeScreen, 2000)">
 
     <!--        Home/Title Screen               -->
     <div class="modal" id="home_screen" style="display: none;"> 
@@ -46,8 +46,9 @@
             <a href="#"><i class="fas fa-cog" title="Settings" onclick="loadMain()"></i></a>  
             <a href="#"><i class="fas fa-home" title="Home" onclick="homeScreen()"></i></a>
           </div>
+          <div class="copy"><p class="copyright">Copyright &copy 2018 All rights reserved. Roger Clarke.</p></div>
         </form>
-    </div>
+    </div>  
 
     <!--        Login Screen                    -->
     <div class="modal" id="loginform" style="display: none;"> 
