got the card selection by mouse to work

--- a/src/allFours.html
+++ b/src/allFours.html
@@ -66,7 +66,7 @@
 
     <script>
         window.onload = function () {
-            mainGameLoop();
+            loadGameAssets();
            
         }
     </script>     
