stuck cant get checkScript to run

--- a/src/lib/title-screen.html
+++ b/src/lib/title-screen.html
@@ -10,7 +10,7 @@
 <TITLE>All Fours Game Title Screen</TITLE>
 
 <SCRIPT src="title-script.js"></SCRIPT>
-<SCRIPT src="exp.js"></SCRIPT>
+<SCRIPT src="exp2.js"></SCRIPT>
 <!--  <script src="game-loader.js">
       window.onload = main();   
 </script> -->                           
