working on graphics now

--- a/src/allFours.html
+++ b/src/allFours.html
@@ -34,7 +34,7 @@
     <div>
         <!-- Game Board -->
         <div class="container" id="game_container">
-                <!--  <canvas id="game_board" width="700" height="450"></canvas>  -->
+                <!--  <canvas id="game_board" width="700" height="450"></canvas> would go here -->
         </div>
         <!-- Game Control Panel -->
         <div class="w3-sidebar w3-bar-block" id="controlPanel">
@@ -66,7 +66,7 @@
 
     <script>
         window.onload = function () {
-            loadGameAssets();
+            //loadGameAssets();
            
         }
     </script>     
