--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link rel="manifest" href="manifest.json">
+    <script type="module" src="/lib/graphicslib.js"></script>   
     <script src="allfours.js"></script>   
 </head>
 
