--- a/src/public/index.html
+++ b/src/public/index.html
@@ -69,7 +69,10 @@
 
     <script>
         window.onload = function () {
-            //loadGameAssets();
+            loadGameAssets();
+            setTimeout(() => {
+                mainGameLoop();
+            }, 3000);
            
         }
     </script>     
