debugging the mouse/keyboard input

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -28,7 +28,7 @@
                         <a href="#">Documentation</a>
                         <a href="#">Contact</a>
                         <a href="/lib/title-screen.html">Title Screen</a>
-                        <a href="/lib/graphics.html">Contact</a>
+                        <a href="/lib/graphics.html">Graphics</a>
                     </nav>
                 </div>
             </div>
