functional.. TODO: complete 'round play'

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -51,6 +51,10 @@
                     <button class="w3-btn" onclick="message()">Message</button>
                     <button class="w3-btn" id="quitBtn" onclick="mainGameLoop()">Start Game</button>
                 </div>
+                <div class="user_input">
+                    <div><h4>Enter your name:</h4></div>
+                    <div><h4>Enter the name of your team:</h4></div>
+                </div>
                 <!-- Display of Player 1's hand -->
                 <div class="hand" id="tophand"></div>
                 <div class="hand" id="bottomhand"></div>
