fixed multiple events issue

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -73,9 +73,9 @@
 
     <script>
         window.onload = function () {
-            loadGameAssets();
+            //loadGameAssets();
             setTimeout(() => {
-                mainGameLoop();
+               mainGameLoop();
             }, 3000);
            
         }
