--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <link rel="manifest" href="manifest.json">
     <script type="module" src="/lib/graphicslib.js"></script>   
     <script src="allfours.js"></script>   
 </head>
@@ -73,11 +72,12 @@
 
     <script>
         window.onload = function () {
-            //loadGameAssets();
+            loadGameAssets();
+            /*
             setTimeout(() => {
                mainGameLoop();
             }, 3000);
-           
+           */
         }
     </script>     
 </body>
