reduce screen objects to single class

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -46,8 +46,8 @@
                 </div>
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
-                    <button class="w3-btn" onclick="unitTestForDisplayTrump()">Test</button>
-                    <button class="w3-btn" onclick="message()">Message</button>
+                    <button class="w3-btn" onclick="listCardOnBoard()">Test</button>
+                    <button class="w3-btn" onclick="displayCardCahe()">Cache</button>
                     <button class="w3-btn" id="quitBtn" onclick="mainGameLoop()">Start Game</button>
                 </div>
                 <div class="user_input">
