one playable game round. complete  a dealer round next.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -48,11 +48,11 @@
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="listCardOnBoard()">Test</button>
                     <button class="w3-btn" onclick="displayCardCahe()">Cache</button>
-                    <button class="w3-btn" id="quitBtn" onclick="mainGameLoop()">Start Game</button>
+                    <button class="w3-btn" id="quitBtn" onclick="mainGameLoop()">Start</button>
                 </div>
                 <div class="user_input">
                     <div><h4>Enter your name:</h4></div>
-                    <div><h4>Enter the name of your team:</h4></div>
+                    <div><h4>Enter your team name:</h4></div>
                 </div>
                 <!-- Display of Player 1's hand -->
                 <div class="hand" id="tophand"></div>
