--- a/src/public/index.html
+++ b/src/public/index.html
@@ -47,7 +47,7 @@
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="listCardOnBoard()">Test</button>
-                    <button class="w3-btn" onclick="displayCardCahe()">Cache</button>
+                    <button class="w3-btn" onclick="displayCardCache()">Cache</button>
                     <button class="w3-btn" id="quitBtn" onclick="mainGameLoop()">Start</button>
                 </div>
                 <div class="user_input">
