--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script type="module" src="/lib/graphicslib.js"></script>   
-    <script src="allfours.js"></script>   
+    <script src="allfours.js"></script>
+    <script src="allfours.test.js"></script>
+    <script src="/lib/testing/unittest_functions.js"></script>   
+   
 </head>
 
 <body>
@@ -46,7 +49,7 @@
                 </div>
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
-                    <button class="w3-btn" onclick="listCardOnBoard()">Test</button>
+                    <button class="w3-btn" onclick="displayFile()">Test</button>
                     <button class="w3-btn" onclick="displayCardCache()">Cache</button>
                     <button class="w3-btn" id="quitBtn" onclick="mainGameLoop()">Start</button>
                 </div>
