tons of changes in /lib/testing

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script type="module" src="/lib/graphicslib.js"></script>   
     <script src="allfours.js"></script>
-    <script src="allfours.test.js"></script>
-    <script src="/lib/testing/unittest_functions.js"></script>   
+    <!-- <script type="module" src="/lib/testing/unittest_functions.mjs"></script> -->    
+    <script type="module" src="allfours.test.mjs"></script>
    
 </head>
 
@@ -49,7 +49,7 @@
                 </div>
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
-                    <button class="w3-btn" onclick="displayFile()">Test</button>
+                    <button class="w3-btn" onclick="testFirstJackDeal()">Test</button>
                     <button class="w3-btn" onclick="displayCardCache()">Cache</button>
                     <button class="w3-btn" id="quitBtn" onclick="mainGameLoop()">Start</button>
                 </div>
@@ -96,5 +96,10 @@
 |                                                                |
 |                                                                |
 ==================================================================
+
+
+/********************************************************************************************** */
+/*                 Copyright (c) 2018-2018 Roger A. Clarke. All Rights Reserved                 */
+/********************************************************************************************** */
 
 -->
