organizing code in to sections. code broken. game does not show.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,10 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script type="module" src="/lib/graphicslib.js"></script>   
-    <script src="allfours.js"></script>
-    <!-- <script type="module" src="/lib/testing/unittest_functions.mjs"></script> -->    
-    <script type="module" src="allfours.test.mjs"></script>
+    <script type="module" src="/lib/graphicslib.js"></script> 
+    <script src="/lib/player.js"></script>
+    <script src="/lib/card.js"></script>  
+    <!-- <script type="module" src="/lib/testing/unittest_functions.mjs"></script>    
+    <script type="module" src="allfours.test.mjs"></script> -->
    
 </head>
 
@@ -73,7 +74,7 @@
         </div>
     </footer>
 
-    <script>
+    <script src="allfours.js">
         window.onload = function () {
             loadGameAssets();
             /*
