playable disabled sound component for better libs

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -30,8 +30,8 @@
                         <a href="#">About</a>
                         <a href="#">Documentation</a>
                         <a href="#">Contact</a>
-                        <a href="/lib/title-screen.html">Title Screen</a>
-                        <a href="/lib/graphics.html">Graphics</a>
+                        <a href="../public/lib/title-screen.html">Title Screen</a>
+                        <a href="../public/lib/graphics.html">Graphics</a>
                     </nav>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="testFirstJackDeal()">Test</button>
                     <button class="w3-btn" onclick="displayCardCache()">Cache</button>
-                    <button class="w3-btn" id="quitBtn" onclick="mainGameLoop()">Start</button>
+                    <button class="w3-btn" id="quitBtn" onclick="start()">Start</button>
                 </div>
                 <div class="user_input">
                     
