--- a/src/public/lib/graphics.html
+++ b/src/public/lib/graphics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HEAD>
     <TITLE>GRAPHICS</TITLE>
-    <SCRIPT type="module"  SRC="example.js"></SCRIPT>
+    <SCRIPT type="module"  SRC="../public/lib/example.js"></SCRIPT>
 </HEAD>
 <BODY>
     <h1></h1>
