fixed errors in  game count and awarding dayes

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -31,7 +31,7 @@
                         <a href="#">Documentation</a>
                         <a href="#">Contact</a>
                         <a href="../public/lib/title-screen.html">Title Screen</a>
-                        <a href="../public/lib/graphics.html">Graphics</a>
+                        <!-- <a href="../public/lib/graphics.html">Graphics</a> -->
                     </nav>
                 </div>
             </div>
