--- a/src/public/index.html
+++ b/src/public/index.html
@@ -76,7 +76,12 @@
                 <div class="hand" id="bottomhand"></div>
                 <div class="hand" id="beg1"></div> 
                 <div class="hand" id="beg2"></div>   
-                -->         
+                --> 
+                <!-- <VIDEO id="hangjack_video">
+                    <source src="vid/hangjack_Small.mp4" type="video/mp4">
+                    <source src="vid/supa hot fire vs b bone.mp4" type="video/mp4">
+                </VIDEO> -->
+
             </div>
         </div>       
     </div>
