--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="w3.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
    <!-- <script type="module" src="/lib/graphicslib.js"></script> 
-    <script src="/lib/player.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="stylesheet" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> 
+    <link rel="stylesheet" type="text/css" media="screen" href="title-style.css" />
+    <script type="text/javascript" src="/lib/title-script.js"></script>
     <script src="/lib/card.js"></script>  
     <script type="module" src="/lib/testing/unittest_functions.mjs"></script>    
     <script type="module" src="allfours.test.mjs"></script> -->
-   
 </head>
 
 <body>
@@ -64,26 +65,13 @@
                       <div><h4>Enter your name:</h4>
                       <input id="player_name" name="name" type="text"><br> 
                     </div>
-<!--                     <div><h4>Enter the name of your team :</h4>
-                    <input name="team" type="text"><br><br>
-                    </div> -->
                     <button class="w3-button w3-round-xlarge w3-border-blue" type="button" onclick="setPlayerName()">ENTER</button>
                     </form>
                 </div>
-                <div id="debug_section"></div>
-                <!-- Display of Player 1's hand 
-                <div class="hand" id="tophand"></div>
-                <div class="hand" id="bottomhand"></div>
-                <div class="hand" id="beg1"></div> 
-                <div class="hand" id="beg2"></div>   
-                --> 
-                <!-- <VIDEO id="hangjack_video">
-                    <source src="vid/hangjack_Small.mp4" type="video/mp4">
-                    <source src="vid/supa hot fire vs b bone.mp4" type="video/mp4">
-                </VIDEO> -->
-
+                <div id="debug_section"></div> <!--section of the DOM reserved for debugging output -->
             </div>
-        </div>       
+        </div>
+        <!--    Menu Screen     -->       
     </div>
 
     <!-- Footer -->
@@ -97,6 +85,7 @@
         window.onload = function () {
            // loadGameAssets();
             /*
+            homeScreen();
             setTimeout(() => {
                mainGameLoop();
             }, 3000);
