--- a/src/public/lib/title-screen.html
+++ b/src/public/lib/title-screen.html
@@ -20,7 +20,7 @@
 <!-- Game Menu -->
 
     <!--        Home/Title Screen               -->
-    <div class="modal" id="home_screen" style="display: none;"> 
+    <div class="modal " id="home_screen" style="display: none;"> 
         <span title="Close Title Screen" class="close" onclick="document.getElementById('home_screen').style.display='none'">×</span>
       <div class="animate" id="content">
         <!-- <form class="modal-content animate" method="POST"> -->
@@ -48,8 +48,8 @@
           <div class="copy"><p class="copyright">Copyright &copy; 2018 - 2019. Roger Clarke. All rights reserved. </p></div>
         </div>  <!-- </form> -->
         <div class="footnote-icons">
-          <a href="#"><i class="fas fa-cog"  title="Settings" onclick="move()"></i></a>  
-          <a href="#"><i class="fas fa-home" title="Home"     onclick="progressBar()"></i></a>
+          <!-- <a href="#"><i class="fas fa-cog"  title="Settings" onclick="move()"></i></a>  
+          <a href="#"><i class="fas fa-home" title="Home"     onclick="progressBar()"></i></a> -->
         </div> <!--   end of footnote-icons   -->
     </div> <!-- end of home_screen  --> 
 
