--- a/src/public/index.html
+++ b/src/public/index.html
@@ -103,11 +103,7 @@
             <p>Copyright &copy; 2018-2019 Gallatin Engineering Ltd. Powered by Prodigy Engineering LLC.</p>
         </div>
     </footer>
-    <script type="text/javascript" src="/src/public/lib/title-script.js">
-    window.onload = function () {
-                    homeScreen();
-                }
-    </script>
+    <script type="text/javascript" src="/src/public/lib/title-script.js"></script>
     <script type="module" src="allfours.js">
         window.onload = function () {
            // loadGame();
