OLD controller paradigm

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -87,7 +87,7 @@
                       <div><h4>Enter your name:</h4>
                         <input id="player_name" name="name" type="text"><br> 
                       </div>
-                      <button class="w3-button w3-round-xlarge w3-border-blue" type="button" onclick="setPlayerName()">ENTER</button>
+                      <button class="w3-button w3-round-xlarge w3-border-blue" type="button" id="enter_btn"   >ENTER</button>
                     </form>
                 </div>
                 <div id="debug_section"></div> <!--section of the DOM reserved for debugging output -->
