--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
-<HTML>
+<HTML lang="en">
 <HEAD>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/frontpage.css"/>
     <title>Two-Man All Fours</title>
     <script type="text/javascript" src="scripts/main.js"></script>
