ver. 0.8.6: TODO - the AI and MVC structure

--- a/src/public/allfours.html
+++ b/src/public/allfours.html
@@ -102,7 +102,7 @@
                 <!-- Calls any function assign to the button via onclick -->
                 <div class="function-buttons">
                     <button class="w3-btn" onclick="homeScreen()">Menu</button>
-                    <button class="w3-btn" onclick="Game.Components.Sound.sndFx[1].play()">Mute</button>
+                    <button class="w3-btn" onclick="Display.video(Game.Components.cutScenes[0])">Video</button>
                     <button class="w3-btn" id="quitBtn" onclick="start()">Start</button>
                 </div>
                 <div class="user_input">                    
