--- a/src/public/allfours.html
+++ b/src/public/allfours.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>ALL FOURS</title>
     <meta name="description" content="A card game indigenous to the country of Trinidad and Tobago. It is a pastime of Trinbagonians.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport"    content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="w3.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="/src/public/lib/title-style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./lib/title-style.css" />
     <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="stylesheet" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> 
 </head>
 
@@ -126,7 +126,7 @@
             <p>Copyright &copy; 2018-2019 Gallatin Engineering Ltd. Powered by Prodigy Engineering LLC.</p>
         </div>
     </footer>
-    <script type="text/javascript" src="/src/public/lib/title-script.js"></script>
+    <script type="text/javascript" src="./lib/title-script.js"></script>
     <script type="module" src="allfours.js">
         window.onload = function () {
             //loadAssets();     //  images, sound & video files
