adding advertising to the website

--- a/src/public/allfours.html
+++ b/src/public/allfours.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <!--    Google Adsense script   -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-9132065189505644",
+        enable_page_level_ads: true
+    });
+    </script>
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>ALL FOURS</title>
     <meta name="description" content="A card game indigenous to the country of Trinidad and Tobago. It is a pastime of Trinbagonians.">
@@ -87,6 +95,9 @@
                 <div class="copy"><p class="copyright">Copyright &copy; 2018 - 2019. Roger Clarke. All rights reserved. </p></div>
             </div>  <!-- </animation div> -->
         </div> <!-- end of menu_screen  --> 
+
+        <!-- Google Ads -->
+
 
         <!-- Game Board -->
         <div class="container" id="game_container">
